<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Deep testing</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_fail">Failed to submit application.</string>
    <string name="application_nosubmitted">Application not submitted</string>
    <string name="application_submitted">Application submitted</string>
    <string name="apply_agree">I have read and agree to the aforesaid contents.</string>
    <string name="apply_disclaimer">"1. The test program may have unforeseeable impacts on your phone. If you choose to join, you shall be liable for any consequences.
2. If you use third-party firmware, some phone functions, for example, the camera, may not run properly or the phone itself may be damaged.
3. Personal and confidential information on the phone may be leaked.
4. The test program may modify some system functions and prevent you from updating the system to enjoy the latest system services.
5. Joining the test program is equal to restoring your phone to factory settings. We recommend backing up your data before you join.
6. After joining the test program, the phone can be repaired but cannot be returned or exchanged. If the phone can exit the bootloader unlocking process, the Three Guarantees after-sales service policies will apply. Otherwise, only repairs are supported."</string>
    <string name="apply_submit">Submit Application</string>
    <string name="apply_supplement">The aforesaid contents do not cover all risks that may come with deep testing. Think twice before joining the test.</string>
    <string name="apply_title">Disclaimer</string>
    <string name="bottom_recommended_header_title">寻找其他设置项？</string>
    <string name="bottom_sheet_behavior">com.coui.appcompat.dialog.panel.COUIBottomSheetBehavior</string>
    <string name="byteShort">" B"</string>
    <string name="byteSpeed">" B/s"</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copy">Copy</string>
    <string name="coui_allow_text">Agree and continue</string>
    <string name="coui_day" />
    <string name="coui_hour">hour</string>
    <string name="coui_install_download_progress_textview">Download</string>
    <string name="coui_install_load_progress_apostrophe">...</string>
    <string name="coui_keyboard_view_access_close_button">Collapse keyboard</string>
    <string name="coui_keyboard_view_access_detail_button">Switch to regular keyboard</string>
    <string name="coui_keyboard_view_keycode_low_shift">Switch to lowercase</string>
    <string name="coui_keyboard_view_top_text">Secure Keyboard</string>
    <string name="coui_keyboardview_keycode_accentedsymbol">Grave accent</string>
    <string name="coui_keyboardview_keycode_andsymbol">Ampersand</string>
    <string name="coui_keyboardview_keycode_apostrophe">Apostrophe</string>
    <string name="coui_keyboardview_keycode_asterisk">Asterisk</string>
    <string name="coui_keyboardview_keycode_atsymbol">At sign</string>
    <string name="coui_keyboardview_keycode_backslash">Backslash</string>
    <string name="coui_keyboardview_keycode_capslock">Caps Lock</string>
    <string name="coui_keyboardview_keycode_caret">Caret</string>
    <string name="coui_keyboardview_keycode_cents">Cent sign</string>
    <string name="coui_keyboardview_keycode_chapter">Section mark</string>
    <string name="coui_keyboardview_keycode_colon">Colon</string>
    <string name="coui_keyboardview_keycode_comma">Comma</string>
    <string name="coui_keyboardview_keycode_dash">Dash</string>
    <string name="coui_keyboardview_keycode_dollar">Dollar sign</string>
    <string name="coui_keyboardview_keycode_eight">Eight</string>
    <string name="coui_keyboardview_keycode_ellipsis">Ellipsis</string>
    <string name="coui_keyboardview_keycode_equal">Equals sign</string>
    <string name="coui_keyboardview_keycode_euro">Euro symbol</string>
    <string name="coui_keyboardview_keycode_exclamation">Exclamation mark</string>
    <string name="coui_keyboardview_keycode_five">Five</string>
    <string name="coui_keyboardview_keycode_four">Four</string>
    <string name="coui_keyboardview_keycode_greater">Greater than sign</string>
    <string name="coui_keyboardview_keycode_initialcapitalization">Capitalize first letter</string>
    <string name="coui_keyboardview_keycode_intervalnumber">Interpunct</string>
    <string name="coui_keyboardview_keycode_koreanwon">Won sign</string>
    <string name="coui_keyboardview_keycode_leftbrace">Left curly bracket</string>
    <string name="coui_keyboardview_keycode_leftdoublequote">Full width left double quotation mark</string>
    <string name="coui_keyboardview_keycode_leftdoubletitle">Left double angle bracket</string>
    <string name="coui_keyboardview_keycode_leftparenthesis">Left parenthesis</string>
    <string name="coui_keyboardview_keycode_leftsinglequote">Full-width single quotation mark</string>
    <string name="coui_keyboardview_keycode_leftsquarebracket">Left square bracket</string>
    <string name="coui_keyboardview_keycode_lessthan">Less than sign</string>
    <string name="coui_keyboardview_keycode_letters">Switch to alphabets</string>
    <string name="coui_keyboardview_keycode_minus">Minus sign</string>
    <string name="coui_keyboardview_keycode_moresymbols">More signs</string>
    <string name="coui_keyboardview_keycode_nine">Nine</string>
    <string name="coui_keyboardview_keycode_number">Switch Number</string>
    <string name="coui_keyboardview_keycode_one">One</string>
    <string name="coui_keyboardview_keycode_percentage">Percent sign</string>
    <string name="coui_keyboardview_keycode_philippinepeso">Peso sign</string>
    <string name="coui_keyboardview_keycode_plus">Plus sign</string>
    <string name="coui_keyboardview_keycode_poundsterling">Pound sign</string>
    <string name="coui_keyboardview_keycode_punctuation">Period</string>
    <string name="coui_keyboardview_keycode_question">Question mark</string>
    <string name="coui_keyboardview_keycode_quotation">Double quotation mark</string>
    <string name="coui_keyboardview_keycode_renminbi">RMB symbol</string>
    <string name="coui_keyboardview_keycode_reverseexclamation">Inverted exclamation mark</string>
    <string name="coui_keyboardview_keycode_reversequestion">Inverted question mark</string>
    <string name="coui_keyboardview_keycode_rightbrace">Right curly bracket</string>
    <string name="coui_keyboardview_keycode_rightdoublequote">Full width right double quotation mark</string>
    <string name="coui_keyboardview_keycode_rightdoubletitle">Right double angle bracket</string>
    <string name="coui_keyboardview_keycode_rightparenthesis">Right parenthesis</string>
    <string name="coui_keyboardview_keycode_rightsinglequote">Full-width right quotation mark</string>
    <string name="coui_keyboardview_keycode_rightsquarebracket">Right square bracket</string>
    <string name="coui_keyboardview_keycode_semicolon">Semicolon</string>
    <string name="coui_keyboardview_keycode_seven">Seven</string>
    <string name="coui_keyboardview_keycode_shift_to_uppercase">Switch to uppercase</string>
    <string name="coui_keyboardview_keycode_six">Six</string>
    <string name="coui_keyboardview_keycode_slash">Slash</string>
    <string name="coui_keyboardview_keycode_space">Space</string>
    <string name="coui_keyboardview_keycode_symbol">Switch to symbols</string>
    <string name="coui_keyboardview_keycode_thousandminutes">Per mille sign</string>
    <string name="coui_keyboardview_keycode_three">Three</string>
    <string name="coui_keyboardview_keycode_two">Two</string>
    <string name="coui_keyboardview_keycode_underline">Underscore</string>
    <string name="coui_keyboardview_keycode_verticalline">Vertical line</string>
    <string name="coui_keyboardview_keycode_wavenumber">Tilde</string>
    <string name="coui_keyboardview_keycode_well">Number sign</string>
    <string name="coui_keyboardview_keycode_zero">Zero</string>
    <string name="coui_loading_view_access_string">Loading</string>
    <string name="coui_lunar_leap_string">闰</string>
    <string name="coui_minute">minute</string>
    <string name="coui_month" />
    <string name="coui_number_keyboard_delete">Delete</string>
    <string name="coui_numeric_keyboard_sure">Done</string>
    <string name="coui_password_keyboard_label_symbol_ok">OK</string>
    <string name="coui_reject_text">Exit</string>
    <string name="coui_search_view_cancel">Cancel</string>
    <string name="coui_search_view_text">Cancel</string>
    <string name="coui_security_alertdailog_privacy">Privacy Policy</string>
    <string name="coui_security_alertdailog_statement">Tap and view %1$s for more information.</string>
    <string name="coui_security_alertdialog_checkbox_msg">"Don't remind me again"</string>
    <string name="coui_simple_lock_access_description">Password input area. You have entered x digits. You need to enter y digits in total.</string>
    <string name="coui_slide_delete">Delete</string>
    <string name="coui_time_picker_day" />
    <string name="coui_time_picker_today">Today</string>
    <string name="coui_touchsearch_dot">•</string>
    <string name="coui_year" />
    <string name="detail_excess">The number of users applying for deep testing has reached the maximum limit.</string>
    <string name="detail_govcustom">This is a government- or corporate-owned phone.</string>
    <string name="detail_invalidlogin">Abnormal sign-in status</string>
    <string name="detail_logintime">Your account has been active for less than 60 days in a row.</string>
    <string name="detail_mobilecustom">This is a carrier-customized phone.</string>
    <string name="password_keyboard_label_alpha_key">ABC</string>
</resources>