<?xml version="1.0" encoding="utf-8"?>
<Keyboard app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_top_verticalGap"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiRowEdgeFlags="top" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_exclamation" app:couiKeyEdgeFlags="left" app:couiKeyLabel="!" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_atsymbol" app:couiKeyLabel="\@" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_well" app:couiKeyLabel="\#" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_percentage" app:couiKeyLabel="%" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_asterisk" app:couiKeyLabel="*" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_plus" app:couiKeyLabel="+" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_equal" app:couiKeyLabel="=" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_underline" app:couiKeyLabel="_" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_slash" app:couiKeyLabel="/" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_backslash" app:couiKeyEdgeFlags="right" app:couiKeyLabel="\\" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_verticalline" app:couiKeyEdgeFlags="left" app:couiKeyLabel="|" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_colon" app:couiKeyLabel=":" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_semicolon" app:couiKeyLabel=";" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_punctuation" app:couiKeyLabel="." />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_comma" app:couiKeyLabel="," />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_question" app:couiKeyLabel="\?" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_apostrophe" app:couiKeyLabel="'" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_quotation" app:couiKeyLabel="&quot;" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_lessthan" app:couiKeyLabel="&lt;" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_greater" app:couiKeyEdgeFlags="right" app:couiKeyLabel=">" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_ellipsis" app:couiKeyEdgeFlags="left" app:couiKeyLabel="…" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_leftparenthesis" app:couiKeyLabel="(" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_rightparenthesis" app:couiKeyLabel=")" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_leftsquarebracket" app:couiKeyLabel="[" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_rightsquarebracket" app:couiKeyLabel="]" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_leftbrace" app:couiKeyLabel="{" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_rightbrace" app:couiKeyLabel="}" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_caret" app:couiKeyLabel="^" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_minus" app:couiKeyLabel="-" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_wavenumber" app:couiKeyEdgeFlags="right" app:couiKeyLabel="~" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiCodes="-7" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_special_horizontalGap" app:couiIsModifier="true" app:couiIsSticky="true" app:couiKeyEdgeFlags="left" app:couiKeyLabel="$¥€" app:couiKeyWidth="@dimen/coui_sym_keybord_shift_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_symbols_lastbutone_startorlast_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_andsymbol" app:couiKeyLabel="&amp;" app:couiKeyWidth="@dimen/coui_password_keyboard_qwerty_symbol_special_width" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_symbols_middle_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_intervalnumber" app:couiKeyLabel="·" app:couiKeyWidth="@dimen/coui_password_keyboard_qwerty_symbol_special_width" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_symbols_middle_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_accentedsymbol" app:couiKeyLabel="`" app:couiKeyWidth="@dimen/coui_password_keyboard_qwerty_symbol_special_width" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_symbols_middle_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_dash" app:couiKeyLabel="—" app:couiKeyWidth="@dimen/coui_password_keyboard_qwerty_symbol_special_width" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_symbols_middle_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_leftdoubletitle" app:couiKeyLabel="《" app:couiKeyWidth="@dimen/coui_password_keyboard_qwerty_symbol_special_width" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_symbols_middle_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_rightdoubletitle" app:couiKeyLabel="》" app:couiKeyWidth="@dimen/coui_password_keyboard_qwerty_symbol_special_width" />
        <Key app:couiCodes="-5" app:couiHorizontalGap="@dimen/coui_password_keyboard_symbols_lastbutone_startorlast_special_horizontalGap" app:couiIsRepeatable="true" app:couiKeyEdgeFlags="right" app:couiKeyIcon="@drawable/coui_sym_keyboard_delete" app:couiKeyWidth="@dimen/coui_sym_keybord_delete_keyWidth" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_end_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiRowEdgeFlags="bottom" app:couiVerticalGap="@dimen/coui_password_kbd_symbols_bottom_verticalGap">
        <Key app:couiCodes="-2" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_bottom_horizontalGap" app:couiKeyEdgeFlags="left" app:couiKeyLabel="@string/password_keyboard_label_alpha_key" app:couiKeyWidth="@dimen/coui_password_keyboard_change_keyWidth" />
        <Key app:couiCodes="-6" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="123" app:couiKeyWidth="@dimen/coui_password_keyboard_number_keyWidth" />
        <Key app:couiCodes="32" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_space" app:couiKeyIcon="@drawable/coui_sym_keyboard_space" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_space_keyWidth" />
        <Key app:couiCodes="10" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyEdgeFlags="right" app:couiKeyLabel="@string/coui_password_keyboard_label_symbol_ok" app:couiKeyWidth="@dimen/coui_password_keyboard_symbol_keyWidth" />
    </Row>
</Keyboard>