<?xml version="1.0" encoding="utf-8"?>
<Keyboard app:couiVerticalGap="@dimen/coui_security_password_numeric_top_verticalGap"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Row app:couiKeyHeight="@dimen/coui_security_password_numeric_keyHeight" app:couiKeyWidth="@dimen/coui_security_password_numeric_middle_keyWidth" app:couiRowEdgeFlags="top" app:couiVerticalGap="@dimen/coui_security_password_numeric_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_one" app:couiKeyEdgeFlags="left" app:couiKeyLabel="1" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_two" app:couiKeyLabel="2" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_three" app:couiKeyLabel="3" />
        <Key app:couiCodes="-5" app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiIsRepeatable="true" app:couiKeyEdgeFlags="right" app:couiKeyIcon="@drawable/coui_sym_keyboard_delete" app:couiKeyWidth="@dimen/coui_security_password_numeric_delete_keyWidth" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_security_password_numeric_keyHeight" app:couiKeyWidth="@dimen/coui_security_password_numeric_middle_keyWidth" app:couiVerticalGap="@dimen/coui_security_password_numeric_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_four" app:couiKeyEdgeFlags="left" app:couiKeyLabel="4" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_five" app:couiKeyLabel="5" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_six" app:couiKeyLabel="6" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_underline" app:couiKeyEdgeFlags="right" app:couiKeyLabel="_" app:couiKeyWidth="@dimen/coui_security_password_numeric_delete_keyWidth" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_security_password_numeric_keyHeight" app:couiKeyWidth="@dimen/coui_security_password_numeric_middle_keyWidth" app:couiVerticalGap="@dimen/coui_security_password_numeric_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_special_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_seven" app:couiKeyEdgeFlags="left" app:couiKeyLabel="7" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_eight" app:couiKeyLabel="8" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_nine" app:couiKeyLabel="9" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_punctuation" app:couiKeyEdgeFlags="right" app:couiKeyLabel="." app:couiKeyWidth="@dimen/coui_security_password_numeric_delete_keyWidth" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_security_password_numeric_keyHeight" app:couiKeyWidth="@dimen/coui_security_password_numeric_middle_keyWidth" app:couiRowEdgeFlags="bottom" app:couiVerticalGap="@dimen/coui_security_password_numeric_bottom_verticalGap">
        <Key app:couiCodes="-2" app:couiHorizontalGap="@dimen/coui_security_password_numeric_left_horizontalGap" app:couiKeyEdgeFlags="left" app:couiKeyLabel="\?#+" app:couiKeyWidth="@dimen/coui_security_password_numeric_change_keyWidth" />
        <Key app:couiCodes="-6" app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyLabel="@string/password_keyboard_label_alpha_key" />
        <Key app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_zero" app:couiKeyLabel="0" />
        <Key app:couiCodes="32" app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_space" app:couiKeyIcon="@drawable/coui_sym_keyboard_small_space" />
        <Key app:couiCodes="10" app:couiHorizontalGap="@dimen/coui_security_password_numeric_middle_horizontalGap" app:couiKeyEdgeFlags="right" app:couiKeyLabel="@string/coui_password_keyboard_label_symbol_ok" app:couiKeyWidth="@dimen/coui_security_password_numeric_delete_keyWidth" />
    </Row>
</Keyboard>