<?xml version="1.0" encoding="utf-8"?>
<Keyboard app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_top_verticalGap"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiRowEdgeFlags="top" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_one" app:couiKeyEdgeFlags="left" app:couiKeyLabel="1" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_two" app:couiKeyLabel="2" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_three" app:couiKeyLabel="3" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_four" app:couiKeyLabel="4" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_five" app:couiKeyLabel="5" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_six" app:couiKeyLabel="6" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_seven" app:couiKeyLabel="7" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_eight" app:couiKeyLabel="8" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_nine" app:couiKeyLabel="9" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_zero" app:couiKeyEdgeFlags="right" app:couiKeyLabel="0" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_horizontalGap" app:couiKeyEdgeFlags="left" app:couiKeyLabel="q" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="w" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="e" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="r" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="t" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="y" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="u" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="i" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="o" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyEdgeFlags="right" app:couiKeyLabel="p" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiHorizontalGap="@dimen/coui_qwerty_middle_row_left_horizontalGap" app:couiKeyEdgeFlags="left" app:couiKeyLabel="a" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="s" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="d" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="f" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="g" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="h" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="j" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="k" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyEdgeFlags="right" app:couiKeyLabel="l" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_middle_verticalGap">
        <Key app:couiCodes="-1" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_horizontalGap" app:couiIsModifier="true" app:couiIsSticky="true" app:couiKeyEdgeFlags="left" app:couiKeyIcon="@drawable/coui_sym_keyboard_shift" app:couiKeyWidth="@dimen/coui_sym_keybord_shift_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_special_horizontalGap" app:couiKeyLabel="z" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="x" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="c" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="v" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="b" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="n" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" />
        <Key app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="m" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" />
        <Key app:couiCodes="-5" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_special_horizontalGap" app:couiIsRepeatable="true" app:couiKeyEdgeFlags="right" app:couiKeyIcon="@drawable/coui_sym_keyboard_delete" app:couiKeyWidth="@dimen/coui_sym_keybord_delete_keyWidth" />
    </Row>
    <Row app:couiKeyHeight="@dimen/coui_password_kbd_qwerty_end_keyHeight" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_top_keyWidth" app:couiRowEdgeFlags="bottom" app:couiVerticalGap="@dimen/coui_password_kbd_qwerty_bottom_verticalGap">
        <Key app:couiCodes="-2" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_left_horizontalGap" app:couiKeyEdgeFlags="left" app:couiKeyLabel="\?#+" app:couiKeyWidth="@dimen/coui_password_keyboard_change_keyWidth" />
        <Key app:couiCodes="-6" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyLabel="123" app:couiKeyWidth="@dimen/coui_password_keyboard_number_keyWidth" />
        <Key app:couiCodes="32" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyAnnounce="@string/coui_keyboardview_keycode_space" app:couiKeyIcon="@drawable/coui_sym_keyboard_space" app:couiKeyWidth="@dimen/coui_password_kbd_qwerty_space_keyWidth" />
        <Key app:couiCodes="10" app:couiHorizontalGap="@dimen/coui_password_keyboard_qwerty_middle_horizontalGap" app:couiKeyEdgeFlags="right" app:couiKeyLabel="@string/coui_password_keyboard_label_symbol_ok" app:couiKeyWidth="@dimen/coui_password_keyboard_symbol_keyWidth" />
    </Row>
</Keyboard>